fixed spacing between activation and output

--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ h1 {
 .table td {
     line-height: 10vh;
     width: 7vw;
-    min-width: 2vw;
+    min-width: 5vw;
     overflow-wrap: break-word;
     font-size: 25px;
 }
